feat: Agrega metaetiquetas SEO y metaetiquetas Open Graph a todas las páginas para mejorar la visibilidad y el uso compartido del sitio web. Esto mejora el rendimiento SEO del sitio web y lo hace más compartible en las plataformas de redes sociales.

--- a/Sitio web Basico/articulo.html
+++ b/Sitio web Basico/articulo.html
@@ -3,7 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Artículos</title>
+    <meta
+      name="description"
+      content="Explora los artículos de Julian Lobon sobre mi proceso de aprendizaje.Descubre insights, tips y más en nuestro portafolio."
+    />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
+    <title>Artículos - Portafolio de Julian Lobon</title>
+    <meta
+      name="keywords"
+      content="artículos, portafolio, aprendizaje, Programación"
+    />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Artículos - Portafolio de Julian Lobon"
+    />
+    <meta
+      property="og:description"
+      content="Descubre artículos sobre mi proceso de aprendizaje en el portafolio de Julian Lobon."
+    />
+    <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
+    <!-- <meta property="og:url" content="[URL de tu página de artículos]"> -->
   </head>
   <body>
     <header>
@@ -35,53 +57,99 @@
     </header>
 
     <main>
-      <h2>Escritos sobre el mi Aprendizaje en Programacion</h2>
+      <h2>Escritos sobre el mi Aprendizaje en Programación</h2>
 
       <section>
         <article>
           <p>Marzo 1 - Marzo 31, 2023</p>
           <h4>Haciendo lo Difícil en Programación Hace Todo Más Fácil</h4>
-          <p>pasé más de 100 horas aprendiendo y practicando conceptos avanzados de programación, desde estructuras de datos complejas hasta algoritmos de búsqueda. Añadir esto a la lista de logros que mis amigos y familiares probablemente no entenderían…</p>
-          <p>Al principio, la curva de aprendizaje fue empinada. Me enfrenté a errores frustrantes y conceptos que parecían imposibles de dominar. Sin embargo, cada obstáculo que superé me proporcionó no solo habilidades técnicas, sino también una nueva forma de pensar y resolver problemas.</p>
-          <p>Aprendí que la programación no se trata solo de escribir código; se trata de desarrollar una mentalidad lógica y analítica. Al final, esos momentos difíciles se convirtieron en la base de mi confianza y creatividad como desarrollador. Hacer lo difícil hizo que la siguiente tarea, por más compleja que fuera, pareciera un desafío manejable en lugar de una montaña insuperable.</p>
-          <p>Hoy, cuando miro atrás, me doy cuenta de que esos días difíciles de aprendizaje y práctica fueron las etapas más importantes en mi camino hacia la maestría en programación.</p>
+          <p>
+            pasé más de 100 horas aprendiendo y practicando conceptos avanzados
+            de programación, desde estructuras de datos complejas hasta
+            algoritmos de búsqueda. Añadir esto a la lista de logros que mis
+            amigos y familiares probablemente no entenderían…
+          </p>
+          <p>
+            Al principio, la curva de aprendizaje fue empinada. Me enfrenté a
+            errores frustrantes y conceptos que parecían imposibles de dominar.
+            Sin embargo, cada obstáculo que superé me proporcionó no solo
+            habilidades técnicas, sino también una nueva forma de pensar y
+            resolver problemas.
+          </p>
+          <p>
+            Aprendí que la programación no se trata solo de escribir código; se
+            trata de desarrollar una mentalidad lógica y analítica. Al final,
+            esos momentos difíciles se convirtieron en la base de mi confianza y
+            creatividad como desarrollador. Hacer lo difícil hizo que la
+            siguiente tarea, por más compleja que fuera, pareciera un desafío
+            manejable en lugar de una montaña insuperable.
+          </p>
+          <p>
+            Hoy, cuando miro atrás, me doy cuenta de que esos días difíciles de
+            aprendizaje y práctica fueron las etapas más importantes en mi
+            camino hacia la maestría en programación.
+          </p>
         </article>
 
         <article>
           <p>Abril 1 - Abril 30, 2023</p>
-          <h4>Dominando Algoritmos </h4>
-          <p>Durante cuatro semanas, me sumergí en algoritmos de búsqueda y ordenación. Al principio, me sentí abrumado, pero después de practicar con desafíos, descubrí que entender estos conceptos hacía que resolver problemas complejos fuera mucho más sencillo.</p>
+          <h4>Dominando Algoritmos</h4>
+          <p>
+            Durante cuatro semanas, me sumergí en algoritmos de búsqueda y
+            ordenación. Al principio, me sentí abrumado, pero después de
+            practicar con desafíos, descubrí que entender estos conceptos hacía
+            que resolver problemas complejos fuera mucho más sencillo.
+          </p>
           <button>Leer mas</button>
         </article>
 
         <article>
           <p>Febrero 1 - Marzo 31, 2023</p>
           <h4>Colaboración en Proyectos</h4>
-          <p>Participé en un proyecto de código abierto durante dos meses. Aprender a trabajar en equipo y recibir retroalimentación fue desafiante, pero la colaboración hizo que las soluciones fueran más creativas y efectivas.</p>
+          <p>
+            Participé en un proyecto de código abierto durante dos meses.
+            Aprender a trabajar en equipo y recibir retroalimentación fue
+            desafiante, pero la colaboración hizo que las soluciones fueran más
+            creativas y efectivas.
+          </p>
           <button>Leer mas</button>
         </article>
 
         <article>
           <p>Enero 1 - Enero 20, 2023</p>
           <h4>Práctica de Testing</h4>
-          <p>Pasé 20 horas implementando pruebas automatizadas en mis proyectos. Al principio, parecía una tarea tediosa, pero ahora veo cómo las pruebas previenen errores, ahorrándome tiempo y esfuerzo en el futuro.</p>
+          <p>
+            Pasé 20 horas implementando pruebas automatizadas en mis proyectos.
+            Al principio, parecía una tarea tediosa, pero ahora veo cómo las
+            pruebas previenen errores, ahorrándome tiempo y esfuerzo en el
+            futuro.
+          </p>
           <button>Leer mas</button>
         </article>
 
         <article>
           <p>Mayo 1 - Mayo 21, 2023</p>
           <h4>Aprendiendo Nuevas Tecnologías</h4>
-          <p>Pasé tres semanas explorando un nuevo framework de desarrollo. La curva de aprendizaje fue empinada, pero dominarlo amplió mis horizontes y me permitió construir aplicaciones más robustas y eficientes.</p>
+          <p>
+            Pasé tres semanas explorando un nuevo framework de desarrollo. La
+            curva de aprendizaje fue empinada, pero dominarlo amplió mis
+            horizontes y me permitió construir aplicaciones más robustas y
+            eficientes.
+          </p>
           <button>Leer mas</button>
         </article>
 
         <article>
           <p>Junio 1 - Junio 31, 2023</p>
           <h4>Aprender a Depurar</h4>
-          <p>Durante este mes, dediqué 30 horas a depurar código y entender errores comunes. Cada error se convirtió en una lección valiosa, transformando la frustración en habilidades prácticas que mejoraron mi confianza como programador.</p>
+          <p>
+            Durante este mes, dediqué 30 horas a depurar código y entender
+            errores comunes. Cada error se convirtió en una lección valiosa,
+            transformando la frustración en habilidades prácticas que mejoraron
+            mi confianza como programador.
+          </p>
           <button>Leer mas</button>
         </article>
-
       </section>
     </main>
 
