--- a/Sitio web Basico/contacto.html
+++ b/Sitio web Basico/contacto.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contactos</title>
+    <meta name="description" content="¿Tienes preguntas? Contacta a Julian Lobon y estaré encantado de ayudarte. Completa el formulario o llámanos a 3117063560.">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <title>Contactos - Portfolio |  Estamos aquí para ayudarte</title>
+    <meta name="keywords" content="contacto, atención al cliente, Desarrollo Web, soporte, consultas">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Julian Lobon">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Contactos - Portfolio">
+    <meta property="og:description" content="¿Tienes preguntas? Contacta a Julian Lobon y estaré encantado de ayudarte. Completa el formulario o llámanos a 3117063560.">
+    <!-- <meta property="og:image" content="ruta/a/imagen.jpg"> -->
+    <!-- <meta property="og:url" content="https://julianlobon.com/contacto"> -->
+
     <script src="https://kit.fontawesome.com/a239ef0096.js" crossorigin="anonymous"></script>
   </head>
   <body>
@@ -38,7 +49,7 @@
     <main>
       <section>
         <form action="">
-          <h4>Contatamé</h4>
+          <h4>Contácteme</h4>
           <input type="text" name="nombre" placeholder="Nombre" required>
           <input type="email" name="email" placeholder="Email" required>
           <input type="text" name="asunto" placeholder="Asunto" required>
@@ -58,7 +69,7 @@
 
           <article>
             <i class="fa-solid fa-location-dot"></i>              
-              <h5>Ubicacion:</h5>
+              <h5>Ubicación:</h5>
               <p>Calle 1 # 25 21 Cali, Colombia</p>
             </section>
           </article>
@@ -79,11 +90,11 @@
         </aside>
       
         <footer>
-          <i class="fa-brands fa-github"></i>
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-instagram"></i>
+          <a href="https://github.com/LobonJulian"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/julian-aguilar/"> <i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/your-facebook-profile-url"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://twitter.com/your-twitter-profile-url"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.instagram.com/your-instagram-profile-url"><i class="fa-brands fa-instagram"></i></a>
         </footer>
       </section>
       
