--- a/Sitio web Basico/index.html
+++ b/Sitio web Basico/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content='' >
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <title>Soy Julian Lobon</title>
+  <meta name="description" content="Bienvenido al portafolio de Soy Julian Lobon. Descubre mis proyectos, artículos y servicios.">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+  <title>Soy Julian Lobon - Portafolio</title>
+  <meta name="keywords" content="portafolio, programación, proyectos, artículos, desarrollo web">
+  <meta name="robots" content="index, follow">
+  
+  <!-- Open Graph -->
+  <meta property="og:title" content="Soy Julian Lobon - Portafolio">
+  <meta property="og:description" content="Explora el portafolio de Soy Julian Lobon y conoce mis trabajos y servicios.">
+  <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
+  <!-- <meta property="og:url" content="[URL de tu página principal]"> -->
 </head>
 <body>
   <header>
