--- a/Sitio web Basico/proyecto.html
+++ b/Sitio web Basico/proyecto.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyectos</title>
+    <meta name="description" content="Descubre los proyectos destacados de Julian Lobon. Explora nuestro portafolio de trabajos y crea.">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+    <title>Proyectos - Portafolio de Julian Lobon</title>
+    <meta name="keywords" content="proyectos, portafolio, desarrollo web, diseño, desarrollo">
+    <meta name="robots" content="index, follow">  
+    <!-- Open Graph -->
+    <meta property="og:title" content="Proyectos - Portafolio de Julian Lobon">
+    <meta property="og:description" content="Explora los proyectos realizados por Julian Lobon.Inspírate con nuestro trabajo.">
+    <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
+    <!-- <meta property="og:url" content="[URL de tu página de proyectos]"> -->
   </head>
   <body>
     <header>
