--- a/Sitio web Basico/index.html
+++ b/Sitio web Basico/index.html
@@ -14,107 +14,113 @@
   <meta property="og:description" content="Explora el portafolio de Soy Julian Lobon y conoce mis trabajos y servicios.">
   <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
   <!-- <meta property="og:url" content="[URL de tu página principal]"> -->
+
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header>
+<body class="container">
+  <header class="header">
+    <section class="header header-section">
+      <header class="header header-nombre">
+        <img class="header-logo" src="img/favicon.png" alt="Logo de Julian Lobon">
+        <h1>Julian Lobon</h1>
+      </header>
     <nav>
-      <h1>Julian Lobon</h1>
-      <ul>
+      <ul class="header header-tabs">
         <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
         <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
         <li class="tabs"><a href="articulo.html"  rel="noopener noreferrer">Articulo</a></li>
         <li class="tabs"><a href="contacto.html"  rel="noopener noreferrer">Contacto</a></li>
       </ul>
     </nav>
-    <section>
-      <h2>FrontEnd Developer</h2>
-      <p>Apasionado desarrollador web con experiencia en HTML, CSS y JavaScript. Especializado en crear sitios atractivos y funcionales, utilizando frameworks como React y Node.js. Enfocado en ofrecer experiencias de usuario intuitivas y soluciones innovadoras. ¡Listo para llevar tus ideas a la web!</p>
+  </section>
+
+    <section class="header header-hero">
+      <h2 class="header-titulo">FrontEnd Developer</h2>
+      <p class="header-parrafo">Apasionado desarrollador web con experiencia en HTML, CSS y JavaScript. Especializado en crear sitios atractivos y funcionales, utilizando frameworks como React y Node.js. Enfocado en ofrecer experiencias de usuario intuitivas y soluciones innovadoras. ¡Listo para llevar tus ideas a la web!</p>
     </section>
   </header>
 
-  <main>
-    <section>
-      <article>
-        <h3>Proyectos</h3>
-        <aside>
-          <p>Calculador</p>
+  <main class="main">
+    <section class="main main-section">
+      <article class="main main-proyectos">
+        <h3 class="main main-titulo">Proyectos</h3>
+        <aside class="main main-aside-proyecto">
+          <p>Calculadora</p>
           <p>Quiz App</p>
           <p>Temporizador de Cuenta Regresiva</p>
           <p>Proxima Pagina del Producto</p>
         </aside>
       </article>
 
-      <article>
-        <h3>Experiencia</h3>
-        <section>
-          <h4>Desarrollador Web | Tech Solutions S.A. </h4>
-          <p>Enero 2022 - Presente</p>
-          <ul>
-            <li>Diseñé y desarrollé sitios web responsivos utilizando HTML, CSS y JavaScript, mejorando la experiencia del usuario en un 30%.</li>
-            <li>Implementé soluciones en React y Node.js para aplicaciones web interactivas, optimizando el rendimiento en un 25%.</li>
-            <li>Colaboré con equipos de diseño y marketing para garantizar una alineación efectiva de objetivos y estética.</li>
+      <article class="main main-apartado">
+        <h3 class="main main-titulo">Experiencia</h3>
+        <section class="main main-apartado-section">
+          <h4 class="main-apartado-titulo">Desarrollador Web | Tech Solutions S.A. </h4>
+          <p class="main-apartado-fecha">Enero 2022 - Presente</p>
+          <ul class="main main-apartado-cuadro">
+            <li class="main main-apartado-parrafo">Diseñé y desarrollé sitios web responsivos utilizando HTML, CSS y JavaScript, mejorando la experiencia del usuario en un 30%.</li>
+            <li class="main main-apartado-parrafo">Implementé soluciones en React y Node.js para aplicaciones web interactivas, optimizando el rendimiento en un 25%.</li>
+            <li class="main main-apartado-parrafo">Colaboré con equipos de diseño y marketing para garantizar una alineación efectiva de objetivos y estética.</li>
         </section>
-        <section>
-          <h4>Desarrollador Junior | Creativa Web</h4>
-          <p>Junio 2020 - Diciembre 2021</p>
-          <ul>
-            <li>Asistí en el desarrollo y mantenimiento de aplicaciones web, asegurando compatibilidad en múltiples navegadores y dispositivos.</li>
-            <li>Realicé pruebas de usabilidad y corregí errores, contribuyendo a una reducción del 40% en incidencias reportadas.</li>
-            <li>Participé en la implementación de metodologías ágiles, mejorando la eficiencia del equipo.</li>
+        <section class="main main-apartado-section">
+          <h4 class="main-apartado-titulo">Desarrollador Junior | Creativa Web</h4>
+          <p class="main-apartado-fecha">Junio 2020 - Diciembre 2021</p>
+          <ul class="main main-apartado-cuadro">
+            <li class="main main-apartado-parrafo">Asistí en el desarrollo y mantenimiento de aplicaciones web, asegurando compatibilidad en múltiples navegadores y dispositivos.</li>
+            <li class="main main-apartado-parrafo">Realicé pruebas de usabilidad y corregí errores, contribuyendo a una reducción del 40% en incidencias reportadas.</li>
+            <li class="main main-apartado-parrafo">Participé en la implementación de metodologías ágiles, mejorando la eficiencia del equipo.</li>
           </ul>
         </section>
       </article>
 
-      <article>
-        <h3>Educación</h3>
-        <section>
-          <h4>Técnico en redes y Telecomunicaciones</h4>
-          <h6>Gente Estratégica | Bogota, Colombia</h6>
-          <p>Septiembre 2016 - Junio 2020</p>
-          <p>
+      <article class="main main-apartado">
+        <h3 class="main-titulo">Educación</h3>
+        <section class="main main-apartado-section main-apartado-section-education">
+          <h4  class="main-apartado-titulo">Técnico en redes y Telecomunicaciones</h4>
+          <h6 class="main-apartado-subtitulo">Gente Estratégica | Bogota, Colombia</h6>
+          <p class="main-apartado-fecha">Septiembre 2016 - Junio 2020</p>
+          <p class="main-apartado-parrafo">
             Enfocado en desarrollo web y programación. Participación en proyectos de software y aplicaciones web como parte del currículo.
           </p>
         </section>
 
-        <section>
-          <h5>Curso de Desarrollo Web Full Stack</h5>
-          <h6>OpenBootCamp | Online</h6>
-          <p>Enero 2023 - Abril 2023</p>
-          <p>Completo programa sobre HTML, CSS, JavaScript, React y Node.js. Proyecto final: desarrollo de una aplicación de comercio electrónico.</p>
+        <section class="main main-apartado-section main-apartado-section-education">
+          <h5 class="main-apartado-titulo">Curso de Desarrollo Web Full Stack</h5>
+          <h6 class="main-apartado-subtitulo">OpenBootCamp | Online</h6>
+          <p class="main-apartado-fecha">Enero 2023 - Abril 2023</p>
+          <p class="main-apartado-parrafo">Completo programa sobre HTML, CSS, JavaScript, React y Node.js. Proyecto final: desarrollo de una aplicación de comercio electrónico.</p>
         </section>
 
-        <section>
-          <h5>Certificación en UX/UI Design</h5>
-          <h6>Coursera | Online</h6>
-          <p>Mayo 2021 - Junio 2021</p>
-          <p>Aprendí principios de diseño centrado en el usuario y técnicas de prototipo para mejorar la experiencia de usuario en aplicaciones web.</p>
-
+        <section class="main main-apartado-section main-apartado-section-education">
+          <h5 class="main-apartado-titulo">Certificación en UX/UI Design</h5>
+          <h6 class="main-apartado-subtitulo">Coursera | Online</h6>
+          <p class="main-apartado-fecha">Mayo 2021 - Junio 2021</p>
+          <p class="main-apartado-parrafo">Aprendí principios de diseño centrado en el usuario y técnicas de prototipo para mejorar la experiencia de usuario en aplicaciones web.</p>
         </section>
       </article>
     </section>
 
-    <section>
-      <h3>Reseñas de Profesores</h3>
-      <aside>
-        <article>
-          <h4>Profesor Juan Getiva, Gente Estratégica</h4>
+    <section class="main main-resena">
+      <h3 class="main-titulo">Reseñas de Profesores</h3>
+      <aside class="main main-resena main-resena-aside">
+        <article class="main main-resena-aside-article">
+          <h4 class="main-subtitulo">Profesor Juan Getiva, Gente Estratégica</h4>
           <p>"Un estudiante excepcional con una gran capacidad para resolver problemas. Su dedicación al desarrollo web y su habilidad para trabajar en equipo lo hacen destacar."</p>
         </article>
 
-        <article>
+        <article class="main main-resena-aside-article">
           <h4>Profesora Ana Martínez, OpenBootCamp</h4>
           <p>"Su compromiso y creatividad en los proyectos fueron impresionantes. Demostró un gran dominio de las tecnologías y siempre estaba dispuesto a ayudar a sus compañeros."</p>
         </article>
-        <article>
+        <article class="main main-resena-aside-article">
           <h4>Profesor Carlos López, Coursera</h4>
           <p>"Excelente en la aplicación de conceptos de UX/UI. Su proyecto final fue un ejemplo de cómo combinar funcionalidad y estética, superando nuestras expectativas."</p>
         </article>
       </aside>
-     
     </section>
   </main>
 
-  <footer>
+  <footer class="footer">
     <p>© Julian Lobon Aguilar - 2024. Todos los derechos reservados. El contenido de este portfolio, incluidos textos, imágenes y diseños, no puede ser reproducido ni utilizado sin el permiso expreso del autor.</p>
   </footer>
 </body>
