--- a/Sitio web Basico/proyecto.html
+++ b/Sitio web Basico/proyecto.html
@@ -13,12 +13,17 @@
     <meta property="og:description" content="Explora los proyectos realizados por Julian Lobon.Inspírate con nuestro trabajo.">
     <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
     <!-- <meta property="og:url" content="[URL de tu página de proyectos]"> -->
+     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <nav>
+    <header class="header">
+      <section class="header header-section">
+      <header class="header header-nombre">
+        <img class="header-logo" src="img/favicon.png" alt="Logo de Julian Lobon">
         <h1>Julian Lobon</h1>
-        <ul>
+      </header>
+      <nav>
+        <ul class="header header-tabs">
           <li class="tabs">
             <a href="index.html" rel="noopener noreferrer">Home</a>
           </li>
@@ -33,8 +38,10 @@
           </li>
         </ul>
       </nav>
-      <section>
-        <h2>Proyectos</h2>
+    </section>
+
+      <section class="header header-hero">
+        <h2 class="header-titulo">Proyectos</h2>
         <p>
           Explora nuestros proyectos más innovadores, donde la creatividad y la
           tecnología se combinan para generar soluciones efectivas y sostenibles
@@ -43,8 +50,8 @@
       </section>
     </header>
 
-    <main>
-      <section>
+    <main class="main">
+      <section class="main-section">
         <section>
         <article>
           <h3>Calculadora</h3>
@@ -88,7 +95,7 @@
       </aside>
     </section>
 
-    <section>
+    <section class="main-section">
       <article>
         <h3>Página de Productos</h3>
         <p><strong>Objetivo:</strong>Desarrollar una página que muestre una lista de productos con información relevante, imágenes y opciones de compra.</p>
@@ -101,7 +108,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <p>
         © Julian Lobon Aguilar - 2024. Todos los derechos reservados. El
         contenido de este portfolio, incluidos textos, imágenes y diseños, no
