feat:  Introduce un nuevo diseño de interfaz de usuario y mejoras estructurales.
Este compromiso trae una revisión completa del diseño y la estructura de la interfaz de usuario del sitio.  Hemos implementado un nuevo sistema de cuadrícula con estilos consistentes para encabezado, pie de página y secciones de contenido principal.  El resultado es una experiencia visualmente más atractiva y coherente para los usuarios.  También agregamos una jerarquía visual clara y mejoramos el flujo de navegación general, lo que facilita a los usuarios encontrar información relevante.  Este rediseño mejora la accesibilidad y la facilidad de uso del sitio web.

--- a/Sitio web Basico/proyecto.html
+++ b/Sitio web Basico/proyecto.html
@@ -1,65 +1,63 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Descubre los proyectos destacados de Julian Lobon. Explora nuestro portafolio de trabajos y crea.">
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <title>Proyectos - Portafolio de Julian Lobon</title>
-    <meta name="keywords" content="proyectos, portafolio, desarrollo web, diseño, desarrollo">
-    <meta name="robots" content="index, follow">  
-    <!-- Open Graph -->
-    <meta property="og:title" content="Proyectos - Portafolio de Julian Lobon">
-    <meta property="og:description" content="Explora los proyectos realizados por Julian Lobon.Inspírate con nuestro trabajo.">
-    <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
-    <!-- <meta property="og:url" content="[URL de tu página de proyectos]"> -->
-     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <header class="header">
-      <section class="header header-section">
-      <header class="header header-nombre">
-        <img class="header-logo" src="img/favicon.png" alt="Logo de Julian Lobon">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Descubre los proyectos destacados de Julian Lobon. Explora nuestro portafolio de trabajos y crea.">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+  <title>Proyectos - Portafolio de Julian Lobon</title>
+  <meta name="keywords" content="proyectos, portafolio, desarrollo web, diseño, desarrollo">
+  <meta name="robots" content="index, follow">
+  <!-- Open Graph -->
+  <meta property="og:title" content="Proyectos - Portafolio de Julian Lobon">
+  <meta property="og:description"
+    content="Explora los proyectos realizados por Julian Lobon.Inspírate con nuestro trabajo.">
+  <!-- <meta property="og:image" content="[URL de una imagen relevante]"> -->
+  <!-- <meta property="og:url" content="[URL de tu página de proyectos]"> -->
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <header class="container col header">
+    <section class="container header--section">
+      <header class="container header__nombre">
+        <img class="header__logo" src="img/favicon.png" alt="Logo de Julian Lobon">
         <h1>Julian Lobon</h1>
       </header>
-      <nav>
-        <ul class="header header-tabs">
-          <li class="tabs">
-            <a href="index.html" rel="noopener noreferrer">Home</a>
-          </li>
-          <li class="tabs">
-            <a href="proyecto.html" rel="noopener noreferrer">Proyecto</a>
-          </li>
-          <li class="tabs">
-            <a href="articulo.html" rel="noopener noreferrer">Articulo</a>
-          </li>
-          <li class="tabs">
-            <a href="contacto.html" rel="noopener noreferrer">Contacto</a>
-          </li>
-        </ul>
-      </nav>
+    <nav>
+      <ul class="container header__tabs">
+        <li class="tabs"><a href="index.html" rel="noopener noreferrer">Home</a></li>
+        <li class="tabs"><a href="proyecto.html" rel="noopener noreferrer">Proyecto</a></li>
+        <li class="tabs"><a href="articulo.html"  rel="noopener noreferrer">Articulo</a></li>
+        <li class="tabs"><a href="contacto.html"  rel="noopener noreferrer">Contacto</a></li>
+      </ul>
+    </nav>
+  </section>
+
+    <section class="container col header__hero">
+      <h2 class="header__titulo">Proyectos</h2>
+      <p class="header--p">
+        Explora nuestros proyectos más innovadores, donde la creatividad y la
+        tecnología se combinan para generar soluciones efectivas y sostenibles
+        que impactan positivamente a la comunidad.
+      </p>
     </section>
+  </header>
 
-      <section class="header header-hero">
-        <h2 class="header-titulo">Proyectos</h2>
-        <p>
-          Explora nuestros proyectos más innovadores, donde la creatividad y la
-          tecnología se combinan para generar soluciones efectivas y sostenibles
-          que impactan positivamente a la comunidad.
-        </p>
-      </section>
-    </header>
-
-    <main class="main">
-      <section class="main-section">
-        <section>
-        <article>
-          <h3>Calculadora</h3>
-          <p><strong>Objetivo:</strong> Crear una calculadora que realice operaciones básicas (suma, resta, multiplicación y división) y se ejecute en un navegador web.</p>
+  <main class="container">
+    <section class="container sec__main">
+    <aside class="container main__cards">
+      <section class="container main__card">
+        <article class="container col ">
+          <h3 class="main__titulo">Calculadora</h3>
+          <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Crear una calculadora que realice operaciones básicas (suma, resta,
+            multiplicación y división) y se ejecute en un navegador web.</p>
           <ul>
-            <h5>Herramientas utilizadas</h5>
-            <li>Lenguaje: JavaScript HTML/CSS</li>
-            <li>IDE: VSCode</li>
+            <h5 class="main__titulo--h4">Herramientas utilizadas</h5>
+            <li class="main__apartado__parrafo">Lenguaje: JavaScript HTML/CSS</li>
+            <li class="main__apartado__parrafo">IDE: VSCode</li>
           </ul>
         </article>
         <aside>
@@ -67,53 +65,57 @@
         </aside>
       </section>
 
-      <section>
-        <article>
-          <h3>Temporizador de Cuenta Regresiva</h3>
-          <p><strong>Objetivo:</strong>Desarrollar un temporizador que permita a los usuarios establecer un tiempo específico y que cuente hacia atrás, emitiendo una alerta al finalizar.</p>
-          <p></p>
+      <section class="container main__card">
+        <article class="container col card">
+          <h3 class="main__titulo">Temporizador de Cuenta Regresiva</h3>
+          <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar un temporizador que permita a los usuarios establecer un tiempo
+            específico y que cuente hacia atrás, emitiendo una alerta al finalizar.</p>
         </article>
         <aside>
-          <img src="https://placehold.co/100x150?text=Temporizador de Cuenta Regresiva" alt="Temporizador de Cuenta Regresiva">
+          <img src="https://placehold.co/100x150?text=Temporizador de Cuenta Regresiva"
+            alt="Temporizador de Cuenta Regresiva">
         </aside>
       </section>
 
-      <article>
-        <h3>Aplicación de Quiz</h3>
-        <p><strong>Objetivo:</strong> Desarrollar una aplicación de quiz interactiva que permita a los usuarios responder preguntas y obtener puntuaciones. La aplicación puede ser utilizada para evaluar conocimientos sobre diversos temas.</p>
-        <ol>
-          <h5>Proceso de Desarrollo</h5>
-          <li>Planificación: Definir el objetivo, el público objetivo y los temas del quiz.</li>
-          <li>Diseño: Crear wireframes y mockups de la interfaz de usuario.</li>
-          <li>Desarrollo: Implementar la funcionalidad del quiz y la interfaz.</li>
-          <li>Pruebas: Probar la aplicación para detectar errores y mejorar la experiencia del usuario.</li>
-          <li>Lanzamiento: Publicar la aplicación en una plataforma adecuada (p. ej., un sitio web o como aplicación móvil).</li>
-        </ol>
-      </article>
-      <aside>
-        <img src="https://placehold.co/100x150?text=Aplicación de Quiz" alt="Aplicación de Quiz">
-      </aside>
-    </section>
-
-    <section class="main-section">
-      <article>
-        <h3>Página de Productos</h3>
-        <p><strong>Objetivo:</strong>Desarrollar una página que muestre una lista de productos con información relevante, imágenes y opciones de compra.</p>
-        <p></p>
-      </article>
-      <aside>
-        <img src="https://placehold.co/100x150?text=Página de Productos" alt="Página de Productos">
-      </aside>
-    </section>
+      <section class="container main__card">
+        <article class="container col">
+          <h3 class="main__titulo">Aplicación de Quiz</h3>
+          <p class="main__apartado__parrafo"><strong>Objetivo:</strong> Desarrollar una aplicación de quiz interactiva que permita a los usuarios
+            responder preguntas y obtener puntuaciones. La aplicación puede ser utilizada para evaluar conocimientos
+            sobre diversos temas.</p>
+          <ol class="container col card--ol">
+            <h5 class="main__titulo--h4">Proceso de Desarrollo</h5>
+            <li class="main__apartado__parrafo">Planificación: Definir el objetivo, el público objetivo y los temas del quiz.</li>
+            <li class="main__apartado__parrafo">Diseño: Crear wireframes y mockups de la interfaz de usuario.</li>
+            <li class="main__apartado__parrafo">Desarrollo: Implementar la funcionalidad del quiz y la interfaz.</li>
+            <li class="main__apartado__parrafo">Pruebas: Probar la aplicación para detectar errores y mejorar la experiencia del usuario.</li>
+            <li class="main__apartado__parrafo">Lanzamiento: Publicar la aplicación en una plataforma adecuada (p. ej., un sitio web o como aplicación
+              móvil).</li>
+          </ol>
+        </article>
+        <aside>
+          <img src="https://placehold.co/100x150?text=Aplicación de Quiz" alt="Aplicación de Quiz">
+        </aside>
       </section>
-    </main>
 
-    <footer class="footer">
-      <p>
-        © Julian Lobon Aguilar - 2024. Todos los derechos reservados. El
-        contenido de este portfolio, incluidos textos, imágenes y diseños, no
-        puede ser reproducido ni utilizado sin el permiso expreso del autor.
-      </p>
-    </footer>
-  </body>
+      <section class="container main__card">
+        <article class="container col card">
+          <h3 class="main__titulo">Página de Productos</h3>
+          <p class="main__apartado__parrafo"><strong>Objetivo:</strong>Desarrollar una página que muestre una lista de productos con información
+            relevante, imágenes y opciones de compra.</p>
+        </article>
+        <aside>
+          <img src="https://placehold.co/100x150?text=Página de Productos" alt="Página de Productos">
+        </aside>
+      </section>
+    </aside>
+  </section>
+  </main>
+
+  <footer class="container footer">
+    <p> <span>© Julian Lobon Aguilar - 2024.</span> Todos los derechos reservados. El contenido de este portfolio,
+      incluidos textos, imágenes y diseños, no puede ser reproducido ni utilizado sin el permiso expreso del autor.</p>
+  </footer>
+</body>
+
 </html>
